--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,14 @@
   }
   * { margin: 0; padding: 0; box-sizing: border-box; }
   body { background: var(--darker); color: var(--text); font-family: 'Space Mono', monospace; overflow-x: hidden; cursor: crosshair; }
-  .stars { position: fixed; inset: 0; z-index: 0; pointer-events: none; }
+  .stars { position: fixed; top:0;right:0;bottom:0;left:0; z-index: 0; pointer-events: none; }
   .stars canvas { width: 100%; height: 100%; }
-  .scanlines { position: fixed; inset: 0; z-index: 999; pointer-events: none; background: repeating-linear-gradient(0deg, transparent, transparent 2px, rgba(0,255,0,0.015) 2px, rgba(0,255,0,0.015) 4px); }
-  .vignette { position: fixed; inset: 0; z-index: 998; pointer-events: none; background: radial-gradient(ellipse at center, transparent 50%, rgba(0,0,0,0.7) 100%); }
+  .scanlines { position: fixed; top:0;right:0;bottom:0;left:0; z-index: 999; pointer-events: none; background: repeating-linear-gradient(0deg, transparent, transparent 2px, rgba(0,255,0,0.015) 2px, rgba(0,255,0,0.015) 4px); }
+  .vignette { position: fixed; top:0;right:0;bottom:0;left:0; z-index: 998; pointer-events: none; background: radial-gradient(ellipse at center, transparent 50%, rgba(0,0,0,0.7) 100%); }
   .page-wrapper { position: relative; z-index: 1; min-height: 100vh; }
 
   /* PRELOADER */
-  .preloader { position: fixed; inset: 0; z-index: 10000; background: var(--darker); display: flex; justify-content: center; align-items: center; padding: 24px; transition: opacity 0.5s ease, visibility 0.5s ease; }
+  .preloader { position: fixed; top:0;right:0;bottom:0;left:0; z-index: 10000; background: var(--darker); display: flex; justify-content: center; align-items: center; padding: 24px; transition: opacity 0.5s ease, visibility 0.5s ease; }
   .preloader.done { opacity: 0; visibility: hidden; pointer-events: none; }
   .preloader-terminal { width: 100%; max-width: 660px; background: #050f05; border: 1px solid var(--panel-border); border-radius: 4px; overflow: hidden; box-shadow: 0 0 60px rgba(57,255,20,0.05); transition: opacity 0.4s ease, transform 0.4s ease; position: relative; z-index: 2; }
   .preloader-terminal.shrink { opacity: 0; transform: scale(0.92) translateY(-30px); pointer-events: none; }
@@ -48,16 +48,16 @@
   .preloader-bar-fill { height: 100%; width: 0%; background: var(--green); box-shadow: 0 0 10px var(--green); border-radius: 2px; transition: width 0.3s ease; }
   .preloader-percent { font-family: 'Space Mono', monospace; font-size: 11px; color: var(--green); min-width: 36px; text-align: right; }
   .preloader-radar { position: absolute; bottom: 16px; right: 20px; width: 70px; height: 70px; opacity: 0.2; }
-  .radar-circle { position: absolute; inset: 0; border: 1px solid var(--green); border-radius: 50%; animation: radarPing 2s ease-out infinite; }
+  .radar-circle { position: absolute; top:0;right:0;bottom:0;left:0; border: 1px solid var(--green); border-radius: 50%; animation: radarPing 2s ease-out infinite; }
   .radar-circle:nth-child(2) { animation-delay: 0.5s; }
   .radar-circle:nth-child(3) { animation-delay: 1s; }
   @keyframes radarPing { 0% { transform: scale(0.1); opacity: 1; } 100% { transform: scale(1); opacity: 0; } }
   .radar-dot { position: absolute; top: 50%; left: 50%; width: 4px; height: 4px; background: var(--green); border-radius: 50%; transform: translate(-50%,-50%); box-shadow: 0 0 8px var(--green); }
 
   /* Galaxy */
-  .galaxy-phase { position: absolute; inset: 0; opacity: 0; transition: opacity 1s ease; pointer-events: none; }
+  .galaxy-phase { position: absolute; top:0;right:0;bottom:0;left:0; opacity: 0; transition: opacity 1s ease; pointer-events: none; }
   .galaxy-phase.active { opacity: 1; }
-  #galaxyCanvas { position: absolute; inset: 0; width: 100%; height: 100%; }
+  #galaxyCanvas { position: absolute; top:0;right:0;bottom:0;left:0; width: 100%; height: 100%; }
   .galaxy-hud { position: absolute; top: 24px; left: 28px; font-family: 'Space Mono', monospace; font-size: 10px; color: var(--text-dim); letter-spacing: 2px; text-transform: uppercase; z-index: 2; opacity: 0; transition: opacity 0.6s ease; }
   .galaxy-hud.show { opacity: 1; }
   .galaxy-hud-line { margin-bottom: 4px; }
@@ -75,9 +75,9 @@
   .page-wrapper { transition: opacity 0.6s ease 0.3s; }
 
   /* BACKROOM OVERLAY — fullscreen takeover */
-  .backroom-overlay { position: fixed; inset: 0; z-index: 9000; background: var(--darker); opacity: 0; visibility: hidden; transition: opacity 0.5s ease, visibility 0.5s ease; }
+  .backroom-overlay { position: fixed; top:0;right:0;bottom:0;left:0; z-index: 9000; background: var(--darker); opacity: 0; visibility: hidden; transition: opacity 0.5s ease, visibility 0.5s ease; }
   .backroom-overlay.open { opacity: 1; visibility: visible; }
-  .backroom-overlay canvas { position: absolute; inset: 0; width: 100%; height: 100%; cursor: grab; }
+  .backroom-overlay canvas { position: absolute; top:0;right:0;bottom:0;left:0; width: 100%; height: 100%; cursor: grab; }
   .backroom-overlay canvas:active { cursor: grabbing; }
   .galaxy-section-hud { position: absolute; top: 16px; left: 20px; font-family: 'Space Mono', monospace; font-size: 9px; color: var(--text-dim); letter-spacing: 2px; text-transform: uppercase; z-index: 2; pointer-events: none; }
   .galaxy-section-hud span { color: var(--green); text-shadow: 0 0 6px var(--green-dim); }
@@ -143,7 +143,7 @@
   body.onboard-active { overflow: hidden; }
 
   /* ONBOARDING OVERLAY */
-  .onboard-overlay { position: fixed; inset: 0; z-index: 9500; background: rgba(2,8,2,0.96); opacity: 0; visibility: hidden; transition: opacity 0.4s ease, visibility 0.4s ease; display: flex; align-items: center; justify-content: center; backdrop-filter: blur(6px); }
+  .onboard-overlay { position: fixed; top:0;right:0;bottom:0;left:0; z-index: 9500; background: rgba(2,8,2,0.96); opacity: 0; visibility: hidden; transition: opacity 0.4s ease, visibility 0.4s ease; display: flex; align-items: center; justify-content: center; backdrop-filter: blur(6px); }
   .onboard-overlay.open { opacity: 1; visibility: visible; }
   .onboard-box { width: 100%; max-width: 520px; max-height: 90vh; overflow-y: auto; padding: 40px 36px; scrollbar-width: thin; scrollbar-color: var(--green-dark) transparent; }
   .onboard-box::-webkit-scrollbar { width: 4px; }
@@ -174,7 +174,7 @@
 
   /* REWARDS OVERLAY */
   body.rewards-active { overflow: hidden; }
-  .rewards-overlay { position: fixed; inset: 0; z-index: 9500; background: rgba(2,8,2,0.96); opacity: 0; visibility: hidden; transition: opacity 0.4s ease, visibility 0.4s ease; display: flex; align-items: center; justify-content: center; backdrop-filter: blur(6px); }
+  .rewards-overlay { position: fixed; top:0;right:0;bottom:0;left:0; z-index: 9500; background: rgba(2,8,2,0.96); opacity: 0; visibility: hidden; transition: opacity 0.4s ease, visibility 0.4s ease; display: flex; align-items: center; justify-content: center; backdrop-filter: blur(6px); }
   .rewards-overlay.open { opacity: 1; visibility: visible; }
   .rewards-box { width: 100%; max-width: 580px; max-height: 90vh; overflow-y: auto; padding: 40px 36px; scrollbar-width: thin; scrollbar-color: var(--green-dark) transparent; }
   .rewards-box::-webkit-scrollbar { width: 4px; }
@@ -241,7 +241,7 @@
 
   /* CHAT OVERLAY */
   body.chat-active { overflow: hidden; }
-  .chat-overlay { position: fixed; inset: 0; z-index: 9500; background: rgba(2,8,2,0.96); opacity: 0; visibility: hidden; transition: opacity 0.4s ease, visibility 0.4s ease; display: flex; align-items: center; justify-content: center; backdrop-filter: blur(6px); }
+  .chat-overlay { position: fixed; top:0;right:0;bottom:0;left:0; z-index: 9500; background: rgba(2,8,2,0.96); opacity: 0; visibility: hidden; transition: opacity 0.4s ease, visibility 0.4s ease; display: flex; align-items: center; justify-content: center; backdrop-filter: blur(6px); }
   .chat-overlay.open { opacity: 1; visibility: visible; }
   .chat-box { width: 100%; max-width: 480px; height: 80vh; max-height: 700px; display: flex; flex-direction: column; border: 1px solid var(--panel-border); background: rgba(5,14,5,0.9); position: relative; }
   .chat-close { position: absolute; top: 10px; right: 14px; background: none; border: none; color: var(--text-dim); font-size: 20px; cursor: pointer; font-family: 'Space Mono', monospace; z-index: 2; }
@@ -906,9 +906,12 @@
       'ORDER BY sy_dist ASC'
     );
     const url = `https://exoplanetarchive.ipac.caltech.edu/TAP/sync?query=${query}&format=json`;
-    fetch(url, { signal: AbortSignal.timeout(8000) })
+    const abortCtrl = new AbortController();
+    const fetchTimeout = setTimeout(() => abortCtrl.abort(), 8000);
+    fetch(url, { signal: abortCtrl.signal })
       .then(r => r.json())
       .then(data => {
+        clearTimeout(fetchTimeout);
         if (Array.isArray(data) && data.length > 5) {
           nasaPlanets = data.map(p => ({
             name: p.pl_name || 'Unknown',
@@ -931,7 +934,7 @@
         }
         nasaFetching = false;
       })
-      .catch(() => { nasaFetching = false; });
+      .catch(() => { clearTimeout(fetchTimeout); nasaFetching = false; });
   })();
 
   function getExoplanets() {
@@ -1135,6 +1138,7 @@
 
   // ======== MAIN SEQUENCE ========
   async function runSequence() {
+   try {
     const d = 50;
 
     // ---- BOOT PHASE ----
@@ -1333,6 +1337,11 @@
     cam.running = false;
     preloader.classList.add('done');
     pageWrapper.classList.remove('hidden');
+   } catch (err) {
+    console.error('[ET] Preloader sequence error:', err);
+    preloader.classList.add('done');
+    pageWrapper.classList.remove('hidden');
+   }
   }
 
   // ======== INTERACTIVE GALAXY (BACKROOM OVERLAY) ========
@@ -1743,8 +1752,22 @@
   document.addEventListener('keydown', tryInitAudio, { once: false });
 
   if (document.fonts && document.fonts.ready) {
-    document.fonts.ready.then(() => setTimeout(runSequence, 250));
+    // Safari bug: document.fonts.ready can hang forever with external fonts
+    // Race it against a timeout
+    Promise.race([
+      document.fonts.ready,
+      new Promise(r => setTimeout(r, 2000))
+    ]).then(() => setTimeout(runSequence, 250));
   } else { setTimeout(runSequence, 500); }
+
+  // Safety net: if preloader is still showing after 45s, force-show the page
+  setTimeout(() => {
+    if (!preloader.classList.contains('done')) {
+      console.warn('[ET] Preloader timeout — forcing page display');
+      preloader.classList.add('done');
+      pageWrapper.classList.remove('hidden');
+    }
+  }, 45000);
 })();
 </script>
 
@@ -1840,7 +1863,7 @@
         <div style="font-size:9px;color:var(--text-dim);letter-spacing:1px;margin-bottom:12px;">this feature is under active development</div>
         <div style="background:rgba(2,8,2,0.6);border:1px solid var(--panel-border);height:24px;position:relative;overflow:hidden;">
           <div style="width:57%;height:100%;background:linear-gradient(90deg,rgba(57,255,20,0.15),rgba(57,255,20,0.3));border-right:2px solid var(--green);transition:width 1s ease;"></div>
-          <span style="position:absolute;inset:0;display:flex;align-items:center;justify-content:center;font-family:'Silkscreen',cursive;font-size:11px;color:var(--green);letter-spacing:2px;text-shadow:0 0 8px var(--green-dim);">57%</span>
+          <span style="position:absolute;top:0;right:0;bottom:0;left:0;display:flex;align-items:center;justify-content:center;font-family:'Silkscreen',cursive;font-size:11px;color:var(--green);letter-spacing:2px;text-shadow:0 0 8px var(--green-dim);">57%</span>
         </div>
         <div style="font-size:8px;color:var(--text-dim);letter-spacing:1px;margin-top:8px;line-height:1.7;">registration + reward claims coming soon<br>join <span style="color:var(--green);">Einstein@home</span> in the meantime — your credits will count</div>
       </div>`;
