--- a/public/index.html
+++ b/public/index.html
@@ -377,12 +377,16 @@
   .target-queue-title { font-size: 9px; color: var(--green); letter-spacing: 3px; text-shadow: 0 0 8px var(--green-dim); }
   .target-queue-hint { font-size: 8px; color: #2a4a2a; letter-spacing: 1px; }
   .target-queue { display: flex; flex-direction: column; gap: 4px; }
-  .target-item { display: flex; align-items: center; justify-content: space-between; padding: 10px 14px; background: rgba(10,21,10,0.4); border: 1px solid var(--panel-border); cursor: pointer; transition: all 0.3s; }
+  .target-item { display: flex; align-items: center; justify-content: space-between; padding: 10px 14px; background: rgba(10,21,10,0.4); border: 1px solid var(--panel-border); transition: all 0.3s; }
   .target-item:hover { border-color: rgba(57,255,20,0.3); background: rgba(57,255,20,0.03); }
   .target-item-left { display: flex; align-items: center; gap: 10px; }
   .target-handle { font-family: 'Space Mono', monospace; font-size: 12px; color: var(--text); letter-spacing: 0.5px; }
   .target-forced { font-size: 8px; color: #ffaa00; letter-spacing: 1px; border: 1px solid rgba(255,170,0,0.3); padding: 1px 5px; }
-  .target-votes { font-family: 'Space Mono', monospace; font-size: 11px; color: var(--green); letter-spacing: 1px; min-width: 50px; text-align: right; }
+  .target-votes { font-family: 'Space Mono', monospace; font-size: 11px; color: var(--green); letter-spacing: 1px; min-width: 50px; text-align: right; display: flex; align-items: center; gap: 8px; }
+  .target-vote-btn { padding: 4px 10px; background: rgba(57,255,20,0.06); border: 1px solid rgba(57,255,20,0.25); color: var(--green); font-family: 'Space Mono', monospace; font-size: 13px; cursor: pointer; transition: all 0.3s; line-height: 1; }
+  .target-vote-btn:hover { background: rgba(57,255,20,0.15); border-color: rgba(57,255,20,0.5); box-shadow: 0 0 10px var(--green-dim); transform: scale(1.1); }
+  .target-vote-btn:active { transform: scale(0.95); }
+  .target-vote-count { min-width: 20px; text-align: right; }
   .target-empty { text-align: center; padding: 24px; color: #2a4a2a; font-style: italic; font-size: 11px; letter-spacing: 1px; }
   .footer-text { font-size: 10px; color: var(--text-dim); letter-spacing: 3px; text-transform: uppercase; }
   .footer-text span { color: var(--green); }
@@ -767,15 +771,15 @@
 
   <section class="target-section" id="targets">
     <div class="section-header"><span class="section-label">◈ TARGET QUEUE</span><span class="section-line"></span></div>
-    <p class="target-desc">Submit X accounts for ET to interact with. The more votes a target gets, the sooner ET drops in. Community consensus drives the queue.</p>
+    <p class="target-desc">Submit X accounts for ET to interact with. Vote up the ones you want ET to visit first — higher votes = higher priority.</p>
     <div class="target-submit-row">
       <input type="text" id="targetInput" class="target-input" placeholder="@username" maxlength="32" autocomplete="off" spellcheck="false" />
-      <button id="targetSubmitBtn" class="target-submit-btn">SUBMIT TARGET</button>
+      <button id="targetSubmitBtn" class="target-submit-btn">ADD TO QUEUE</button>
     </div>
     <div id="targetMsg" class="target-msg"></div>
     <div class="target-queue-header">
       <span class="target-queue-title">QUEUE</span>
-      <span class="target-queue-hint">tap to vote · more votes = higher priority</span>
+      <span class="target-queue-hint">▲ vote to boost priority</span>
     </div>
     <div id="targetQueue" class="target-queue"></div>
   </section>
@@ -2452,21 +2456,27 @@
       const res = await fetch('/api/targets');
       const data = await res.json();
       if (!data.targets || data.targets.length === 0) {
-        queue.innerHTML = '<div class="target-empty">no targets yet — be the first to submit one</div>';
+        queue.innerHTML = '<div class="target-empty">no targets yet — be the first to add one</div>';
         return;
       }
       queue.innerHTML = data.targets.map(t =>
-        `<div class="target-item" data-handle="${t.handle}" title="Click to vote for @${t.handle}">
+        `<div class="target-item">
           <div class="target-item-left">
             <span class="target-handle">@${t.handle}</span>
             ${t.forced ? '<span class="target-forced">FORCED</span>' : ''}
           </div>
-          <span class="target-votes">${t.votes} vote${t.votes !== 1 ? 's' : ''}</span>
+          <div class="target-votes">
+            <span class="target-vote-count">${t.votes}</span>
+            <button class="target-vote-btn" data-handle="${t.handle}" title="Vote for @${t.handle}">▲</button>
+          </div>
         </div>`
       ).join('');
-      // Click to vote
-      queue.querySelectorAll('.target-item').forEach(el => {
-        el.addEventListener('click', () => submitHandle(el.dataset.handle));
+      // Vote buttons
+      queue.querySelectorAll('.target-vote-btn').forEach(el => {
+        el.addEventListener('click', (e) => {
+          e.stopPropagation();
+          voteHandle(el.dataset.handle);
+        });
       });
     } catch {
       queue.innerHTML = '<div class="target-empty">failed to load queue</div>';
@@ -2480,13 +2490,26 @@
       const res = await fetch('/api/targets', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ handle }),
+        body: JSON.stringify({ handle, action: 'submit' }),
       });
       const data = await res.json();
       if (data.error) { showMsg(data.error, false); }
       else { showMsg(data.message, true); input.value = ''; loadQueue(); }
     } catch { showMsg('submission failed — try again', false); }
     btn.disabled = false;
+  }
+
+  async function voteHandle(handle) {
+    try {
+      const res = await fetch('/api/targets', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ handle, action: 'vote' }),
+      });
+      const data = await res.json();
+      if (data.error) { showMsg(data.error, false); }
+      else { showMsg(data.message, true); loadQueue(); }
+    } catch { showMsg('vote failed — try again', false); }
   }
 
   btn.addEventListener('click', () => {
@@ -2499,7 +2522,6 @@
   });
 
   loadQueue();
-  // Refresh queue every 30s
   setInterval(loadQueue, 30000);
 })();
 </script>
